gitops/bootstrap/beelink/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: fredcorp-ca
    cert-manager.io/common-name: argocd.k0s-fullstack.fredcorp.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: https
  name: argocd-server
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.k0s-fullstack.fredcorp.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argocd.k0s-fullstack.fredcorp.com
      secretName: argocd-server-tls
